# fintracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-dev  README.md  Untitled Diagram.drawio  alembic.ini  database-backup.sh  docker-compose-dev.yaml  docker-compose.yaml  entrypoint.sh  env-example  example-db-secrets.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  deploy.yaml
app/: config.py  database.py  dependencies.py  main.py  middleware.py
app/api/: handlers.py
app/api/dependencies/: auth.py  base.py  categories.py  dashboards.py  transactions.py
app/api/v1/: __init__.py
app/domain/: exceptions.py
app/domain/abstractions/: password_handler.py  repositories.py  token.py  usecases.py
app/domain/business_logic/: conversor.py  validators.py
app/domain/entities/: base.py  categories.py  transactions.py  users.py
app/domain/exceptions/: auth.py  base.py  categories.py  transactions.py  users.py
app/domain/value_objects/: auth.py  currency.py  dashboard.py  pagination.py  token.py  transactions.py
app/infra/auth/: password_handler.py  token.py
app/infra/configs/: settings.py
app/migrations/: env.py
app/routes/: categories.py  dashboard.py  transactions.py  users.py
app/schemas/: auth.py  categories.py  dashboard.py  transactions.py  users.py
k8s/: app-configmaps.yaml  app-deployment.yaml  app-service.yaml  configmap.yaml  db-deployment.yaml  db-pvc.yaml  db-service.yaml  example-db-secrets.yaml  namespace.yaml
tests/: test_usecase_list_transactions.py
(+41 files in other folders)
